tests/expect/error/on-output/symbol-already-declared-on-shorthand.nva
// as the shorthand variable initialization implicitely
// defines a new variable, redeclarations are also not allowed
x: int;
x = 1;

x := "Hello";